# bpadmm

./: Cargo.toml  INSTALL.md  README.md  pyproject.toml
doc/: intro_cs.ipynb
src/: basis_pursuit_admm.rs  lib.rs  pinv.rs  soft_threshold.rs
src-python/bpadmm/: __init__.py  jax.py  reference.py  rustimpl.py
src/bpadmm/: __init__.py  jax.py  ocft.py  reference.py  utility.py
test/: donoho_tanner.py  radar_imaging.py  recovery_rate.py  simple.py  soft_threshold.py  test_decay.py  test_ocft.py  test_pinv.py  test_radar_imaging.py  test_recovery_rate.py  test_simple.py  test_soft_threshold.py
