[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bpadmm"
description = "Basis Pursuit by ADMM"
authors = [
  {name = "Taishi Hashimoto", email = "hashimoto.taishi@nipr.ac.jp"},
]
version = "2.1.3"
requires-python = ">= 3.7"
dependencies = [
    "numpy",
    "jax",
    "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}
